--- a/01 Classification and Vector Spaces/Week 1/C1_W1_Assignment.ipynb
+++ b/01 Classification and Vector Spaces/Week 1/C1_W1_Assignment.ipynb
@@ -34,10 +34,11 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package twitter_samples to\n",
-      "[nltk_data]     /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/twitter_samples.zip.\n",
-      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]     /Users/florianboetsch/nltk_data...\n",
+      "[nltk_data]   Package twitter_samples is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/florianboetsch/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,9 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_y.shape = (8000, 1)\n",
+      "test_y.shape = (2000, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape train and test sets\n",
     "print(\"train_y.shape = \" + str(train_y.shape))\n",
@@ -204,9 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type(freqs) = <class 'dict'>\n",
+      "len(freqs) = 11428\n"
+     ]
+    }
+   ],
    "source": [
     "# create frequency dictionary\n",
     "freqs = build_freqs(train_x, train_y)\n",
@@ -237,9 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an example of a positive tweet: \n",
+      " #FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)\n",
+      "\n",
+      "This is an example of the processed version of the tweet: \n",
+      " ['followfriday', 'top', 'engag', 'member', 'commun', 'week', ':)']\n"
+     ]
+    }
+   ],
    "source": [
     "# test the function below\n",
     "print('This is an example of a positive tweet: \\n', train_x[0])\n",
@@ -305,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +351,7 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    # calculate the sigmoid of z\n",
-    "    h = None\n",
+    "    h = 1 / (1 + np.exp(-z))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return h"
@@ -328,9 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS!\n",
+      "CORRECT!\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing your function \n",
     "if (sigmoid(0) == 0.5):\n",
@@ -346,9 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_sigmoid(sigmoid)"
@@ -396,9 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.210340371976294"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# verify that when the model predicts close to 1, but the actual label is 0, the loss is a large positive value\n",
     "-1 * (1 - 0) * np.log(1 - 0.9999) # loss is about 9.2"
@@ -413,9 +472,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.210340371976182"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# verify that when the model predicts close to 0 but the actual label is 1, the loss is a large positive value\n",
     "-1 * np.log(0.0001) # loss is about 9.2"
@@ -489,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,21 +579,21 @@
     "    '''\n",
     "    ### START CODE HERE ###\n",
     "    # get 'm', the number of rows in matrix x\n",
-    "    m = None\n",
+    "    m = x.shape[0]\n",
     "    \n",
     "    for i in range(0, num_iters):\n",
     "        \n",
     "        # get z, the dot product of x and theta\n",
-    "        z = None\n",
+    "        z = np.dot(x,theta)\n",
     "        \n",
     "        # get the sigmoid of z\n",
-    "        h = None\n",
+    "        h = sigmoid(z)\n",
     "        \n",
     "        # calculate the cost function\n",
-    "        J = None\n",
+    "        J = -1./m * (np.dot(y.transpose(), np.log(h)) + np.dot((1-y).transpose(),np.log(1-h)))    \n",
     "\n",
     "        # update the weights theta\n",
-    "        theta = None\n",
+    "        theta = theta - (alpha/m) * np.dot(x.transpose(),(h-y))\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    J = float(J)\n",
@@ -532,9 +602,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost after training is 0.67094970.\n",
+      "The resulting vector of weights is [4.1e-07, 0.00035658, 7.309e-05]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the function\n",
     "# Construct a synthetic test case using numpy PRNG functions\n",
@@ -563,9 +642,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_gradientDescent(gradientDescent)"
@@ -609,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,10 +724,10 @@
     "    for word in word_l:\n",
     "        \n",
     "        # increment the word count for the positive label 1\n",
-    "        x[0,1] += None\n",
+    "        x[0,1] += freqs.get((word, 1.0),0)\n",
     "        \n",
     "        # increment the word count for the negative label 0\n",
-    "        x[0,2] += None\n",
+    "        x[0,2] += freqs.get((word, 0.0),0)\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    assert(x.shape == (1, 3))\n",
@@ -649,9 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000e+00 3.133e+03 6.100e+01]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check your function\n",
     "# test 1\n",
@@ -672,9 +767,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# test 2:\n",
     "# check for when the words are not in the freqs dictionary\n",
@@ -694,9 +797,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_extract_features(extract_features, freqs)"
@@ -717,9 +828,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost after training is 0.22521260.\n",
+      "The resulting vector of weights is [6e-08, 0.0005382, -0.0005583]\n"
+     ]
+    }
+   ],
    "source": [
     "# collect the features 'x' and stack them into a matrix 'X'\n",
     "X = np.zeros((len(train_x), 3))\n",
@@ -767,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,10 +904,10 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # extract the features of the tweet and store it into x\n",
-    "    x = None\n",
+    "    x = extract_features(tweet,freqs)\n",
     "    \n",
     "    # make the prediction using x and theta\n",
-    "    y_pred = None\n",
+    "    y_pred = sigmoid(np.dot(x,theta))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -796,11 +916,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am happy -> 0.519275\n",
+      "I am bad -> 0.494347\n",
+      "this movie should have been great. -> 0.515980\n",
+      "great -> 0.516065\n",
+      "great great -> 0.532097\n",
+      "great great great -> 0.548063\n",
+      "great great great great -> 0.563930\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to test your function\n",
     "for tweet in ['I am happy', 'I am bad', 'this movie should have been great.', 'great', 'great great', 'great great great', 'great great great great']:\n",
@@ -825,9 +959,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.83110766]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to check the sentiment of your own tweet below\n",
     "my_tweet = 'I am learning :)'\n",
@@ -836,9 +981,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_predict_tweet(predict_tweet, freqs, theta)"
@@ -876,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,11 +1048,11 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # the list for storing predictions\n",
-    "    y_hat = None\n",
+    "    y_hat = []\n",
     "    \n",
     "    for tweet in test_x:\n",
     "        # get the label prediction for the tweet\n",
-    "        y_pred = None\n",
+    "        y_pred = predict_tweet(tweet, freqs, theta)\n",
     "        \n",
     "        if y_pred > 0.5:\n",
     "            # append 1.0 to the list\n",
@@ -910,7 +1063,7 @@
     "\n",
     "    # With the above implementation, y_hat is a list, but test_y is (m,1) array\n",
     "    # convert both to one-dimensional arrays in order to compare them using the '==' operator\n",
-    "    accuracy = None\n",
+    "    accuracy = (y_hat==np.squeeze(test_y)).sum()/len(test_x)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -919,9 +1072,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression model's accuracy = 0.9950\n"
+     ]
+    }
+   ],
    "source": [
     "tmp_accuracy = test_logistic_regression(test_x, test_y, freqs, theta)\n",
     "print(f\"Logistic regression model's accuracy = {tmp_accuracy:.4f}\")"
@@ -938,9 +1099,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.unittest_test_logistic_regression(test_logistic_regression, freqs, theta)"
@@ -957,9 +1126,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label Predicted Tweet\n",
+      "THE TWEET IS: @MarkBreech Not sure it would be good thing 4 my bottom daring 2 say 2 Miss B but Im gonna be so stubborn on mouth soaping ! #NotHavingit :p\n",
+      "THE PROCESSED TWEET IS: ['sure', 'would', 'good', 'thing', '4', 'bottom', 'dare', '2', 'say', '2', 'miss', 'b', 'im', 'gonna', 'stubborn', 'mouth', 'soap', 'nothavingit', ':p']\n",
+      "1\t0.48942982\tb'sure would good thing 4 bottom dare 2 say 2 miss b im gonna stubborn mouth soap nothavingit :p'\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots\n",
+      "http://t.co/UGQzOx0huu\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418982\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/aOKldo3GMj http://t.co/xWCM9qyRG5\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418982\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/R2JBO8iNww http://t.co/ow5BBwdEMY\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418982\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: off to the park to get some sunlight : )\n",
+      "THE PROCESSED TWEET IS: ['park', 'get', 'sunlight']\n",
+      "1\t0.49636406\tb'park get sunlight'\n",
+      "THE TWEET IS: @msarosh Uff Itna Miss karhy thy ap :p\n",
+      "THE PROCESSED TWEET IS: ['uff', 'itna', 'miss', 'karhi', 'thi', 'ap', ':p']\n",
+      "1\t0.48250522\tb'uff itna miss karhi thi ap :p'\n",
+      "THE TWEET IS: @phenomyoutube u probs had more fun with david than me : (\n",
+      "THE PROCESSED TWEET IS: ['u', 'prob', 'fun', 'david']\n",
+      "0\t0.50988296\tb'u prob fun david'\n",
+      "THE TWEET IS: pats jay : (\n",
+      "THE PROCESSED TWEET IS: ['pat', 'jay']\n",
+      "0\t0.50040366\tb'pat jay'\n",
+      "THE TWEET IS: my beloved grandmother : ( https://t.co/wt4oXq5xCf\n",
+      "THE PROCESSED TWEET IS: ['belov', 'grandmoth']\n",
+      "0\t0.50000002\tb'belov grandmoth'\n",
+      "THE TWEET IS: Sr. Financial Analyst - Expedia, Inc.: (#Bellevue, WA) http://t.co/ktknMhvwCI #Finance #ExpediaJobs #Job #Jobs #Hiring\n",
+      "THE PROCESSED TWEET IS: ['sr', 'financi', 'analyst', 'expedia', 'inc', 'bellevu', 'wa', 'financ', 'expediajob', 'job', 'job', 'hire']\n",
+      "0\t0.50648699\tb'sr financi analyst expedia inc bellevu wa financ expediajob job job hire'\n"
+     ]
+    }
+   ],
    "source": [
     "# Some error analysis done for you\n",
     "print('Label Predicted Tweet')\n",
@@ -988,9 +1196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ridicul', 'bright', 'movi', 'plot', 'terribl', 'sad', 'end']\n",
+      "[[0.48125421]]\n",
+      "Negative sentiment\n"
+     ]
+    }
+   ],
    "source": [
     "# Feel free to change the tweet below\n",
     "my_tweet = 'This is a ridiculously bright movie. The plot was terrible and I was sad until the ending!'\n",
@@ -1002,6 +1220,14 @@
     "else: \n",
     "    print('Negative sentiment')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56d6d977",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1020,7 +1246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
