--- a/01 Classification and Vector Spaces/4 Machine Translation and Document Search/lab/C1_W4_lecture_nb_01_vector_manipulation.ipynb
+++ b/01 Classification and Vector Spaces/4 Machine Translation and Document Search/lab/C1_W4_lecture_nb_01_vector_manipulation.ipynb
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_vectors([x], axes=[4, 4], fname='transform_x.svg')"
+    "plot_vectors([x], axes=[4, 4], fname='images/transform_x.svg')"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_vectors([x, y], axes=[4, 4], fname='transformx_and_y.svg')"
+    "plot_vectors([x, y], axes=[4, 4], fname='images/transformx_and_y.svg')"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_vectors([x2, y2], fname='transform_02.svg')"
+    "plot_vectors([x2, y2], fname='images/transform_02.svg')"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
