--- a/02 Probabilistic Models/3 Autocomplete and Langauge Models/assignment/C2_W3_Assignment.ipynb
+++ b/02 Probabilistic Models/3 Autocomplete and Langauge Models/assignment/C2_W3_Assignment.ipynb
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,10 +1052,10 @@
     "    vocabulary = get_words_with_nplus_frequency(train_data, count_threshold)\n",
     "    \n",
     "    # For the train data, replace less common words with \"<unk>\"\n",
-    "    train_data_replaced = replace_oov_words_by_unk(train_data, vocabulary)\n",
+    "    train_data_replaced = replace_oov_words_by_unk(train_data, vocabulary, unknown_token)\n",
     "    \n",
     "    # For the test data, replace less common words with \"<unk>\"\n",
-    "    test_data_replaced = replace_oov_words_by_unk(test_data, vocabulary)\n",
+    "    test_data_replaced = replace_oov_words_by_unk(test_data, vocabulary, unknown_token)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return train_data_replaced, test_data_replaced, vocabulary"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1122,24 +1122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrong number of unknown tokens in the test_data_replaced list. Check the unknown token value and how you are using it.\n",
-      "\t Expected: 4 \n",
-      "\tGot: 0.\n",
-      "Wrong number of unknown tokens in the train_data_replaced list. Check the unknown token value and how you are using it.\n",
-      "\t Expected: 10 \n",
-      "\tGot: 0.\n",
-      "Wrong number of unknown tokens in the test_data_replaced list. Check the unknown token value and how you are using it.\n",
-      "\t Expected: 7 \n",
-      "\tGot: 0.\n",
-      "\u001b[92m 9  Tests passed\n",
-      "\u001b[91m 3  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -1158,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,46 +1315,45 @@
     "    # Initialize dictionary of n-grams and their counts\n",
     "    n_grams = {}\n",
     "\n",
-    "    ### START CODE HERE ###\n",
-    "    \n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "\n",
     "    # Go through each sentence in the data\n",
     "    for sentence in data: # complete this line\n",
-    "        \n",
+    "\n",
     "        # prepend start token n times, and  append <e> one time\n",
-    "        sentence = [start_token]*n + sentence + [end_token]\n",
-    "        \n",
+    "        sentence = [start_token] * n + sentence + [end_token]\n",
+    "\n",
     "        # convert list to tuple\n",
     "        # So that the sequence of words can be used as\n",
     "        # a key in the dictionary\n",
     "        sentence = tuple(sentence)\n",
-    "        \n",
+    "\n",
     "        # Use 'i' to indicate the start of the n-gram\n",
     "        # from index 0\n",
     "        # to the last index where the end of the n-gram\n",
     "        # is within the sentence.\n",
-    "       \n",
-    "        m = len(sentence) if n==1 else len(sentence)-1\n",
-    "        for i in range(m): # complete this line\n",
+    "\n",
+    "        for i in range(0, len(sentence) - (n - 1)): # complete this line\n",
     "\n",
     "            # Get the n-gram from i to i+n\n",
-    "            n_gram = sentence[i:i+n]\n",
+    "            n_gram = sentence[i: i + n]\n",
     "\n",
     "            # check if the n-gram is in the dictionary\n",
-    "            if n_gram in n_grams.keys(): # complete this line\n",
-    "            \n",
+    "            if n_gram in n_grams: # complete this line\n",
+    "\n",
     "                # Increment the count for this n-gram\n",
     "                n_grams[n_gram] += 1\n",
     "            else:\n",
     "                # Initialize this n-gram count to 1\n",
     "                n_grams[n_gram] = 1\n",
-    "    \n",
+    "\n",
     "            ### END CODE HERE ###\n",
     "    return n_grams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1407,18 +1396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrong output dictionary.\n",
-      "\t Expected: {('-1', '-1', '-1'): 4, ('-1', '-1', 'in'): 1, ('-1', 'in', 'sunset'): 1, ('in', 'sunset', 'sky'): 1, ('sunset', 'sky', 'is'): 1, ('sky', 'is', 'red'): 1, ('is', 'red', '-2'): 1, ('-1', '-1', 'i'): 1, ('-1', 'i', 'like'): 1, ('i', 'like', 'a'): 1, ('like', 'a', 'cat'): 2, ('a', 'cat', '-2'): 2, ('-1', '-1', 'this'): 1, ('-1', 'this', 'dog'): 1, ('this', 'dog', 'is'): 1, ('dog', 'is', 'like'): 1, ('is', 'like', 'a'): 1, ('-1', '-1', 'really'): 1, ('-1', 'really', 'really'): 1, ('really', 'really', 'long'): 1, ('really', 'long', 'sentence'): 1, ('long', 'sentence', '.'): 1, ('sentence', '.', 'it'): 1, ('.', 'it', 'is'): 1, ('it', 'is', 'very'): 1, ('is', 'very', 'long'): 1, ('very', 'long', 'indeed'): 1, ('long', 'indeed', ';'): 1, ('indeed', ';', 'so'): 1, (';', 'so', 'long'): 1, ('so', 'long', '...'): 1, ('long', '...', '-2'): 1} \n",
-      "\tGot: {('-1', '-1', '-1'): 4, ('-1', '-1', 'in'): 1, ('-1', 'in', 'sunset'): 1, ('in', 'sunset', 'sky'): 1, ('sunset', 'sky', 'is'): 1, ('sky', 'is', 'red'): 1, ('is', 'red', '-2'): 1, ('red', '-2'): 1, ('-1', '-1', 'i'): 1, ('-1', 'i', 'like'): 1, ('i', 'like', 'a'): 1, ('like', 'a', 'cat'): 2, ('a', 'cat', '-2'): 2, ('cat', '-2'): 2, ('-1', '-1', 'this'): 1, ('-1', 'this', 'dog'): 1, ('this', 'dog', 'is'): 1, ('dog', 'is', 'like'): 1, ('is', 'like', 'a'): 1, ('-1', '-1', 'really'): 1, ('-1', 'really', 'really'): 1, ('really', 'really', 'long'): 1, ('really', 'long', 'sentence'): 1, ('long', 'sentence', '.'): 1, ('sentence', '.', 'it'): 1, ('.', 'it', 'is'): 1, ('it', 'is', 'very'): 1, ('is', 'very', 'long'): 1, ('very', 'long', 'indeed'): 1, ('long', 'indeed', ';'): 1, ('indeed', ';', 'so'): 1, (';', 'so', 'long'): 1, ('so', 'long', '...'): 1, ('long', '...', '-2'): 1, ('...', '-2'): 1}.\n",
-      "\u001b[92m 5  Tests passed\n",
-      "\u001b[91m 1  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -1476,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1500,33 +1485,36 @@
     "    # convert list to tuple to use it as a dictionary key\n",
     "    previous_n_gram = tuple(previous_n_gram)\n",
     "    \n",
-    "    ### START CODE HERE ###\n",
-    "    \n",
+    "    # convert list to tuple to use it as a dictionary key\n",
+    "    previous_n_gram = tuple(previous_n_gram)\n",
+    "\n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "\n",
     "    # Set the denominator\n",
     "    # If the previous n-gram exists in the dictionary of n-gram counts,\n",
     "    # Get its count.  Otherwise set the count to zero\n",
     "    # Use the dictionary that has counts for n-grams\n",
-    "    previous_n_gram_count = n_gram_counts[previous_n_gram] if previous_n_gram in n_gram_counts else 0\n",
-    "            \n",
+    "    previous_n_gram_count = n_gram_counts.get(previous_n_gram, 0)\n",
+    "\n",
     "    # Calculate the denominator using the count of the previous n gram\n",
     "    # and apply k-smoothing\n",
-    "    denominator = n_gram_counts[previous_n_gram] + k*vocabulary_size\n",
+    "    denominator = previous_n_gram_count + k * vocabulary_size\n",
     "\n",
     "    # Define n plus 1 gram as the previous n-gram plus the current word as a tuple\n",
     "    n_plus1_gram = previous_n_gram + (word,)\n",
-    "  \n",
+    "\n",
     "    # Set the count to the count in the dictionary,\n",
     "    # otherwise 0 if not in the dictionary\n",
-    "    # use the dictionary that has counts for the n-gram plus current word    \n",
-    "    n_plus1_gram_count = n_plus1_gram_counts[n_plus1_gram] if n_plus1_gram in n_plus1_gram_counts else 0\n",
-    "            \n",
+    "    # use the dictionary that has counts for the n-gram plus current word\n",
+    "    n_plus1_gram_count = n_plus1_gram_counts.get(n_plus1_gram, 0)\n",
+    "\n",
     "    # Define the numerator use the count of the n-gram plus current word,\n",
     "    # and apply smoothing\n",
     "    numerator = n_plus1_gram_count + k\n",
-    "        \n",
+    "\n",
     "    # Calculate the probability as the numerator divided by denominator\n",
     "    probability = numerator/denominator\n",
-    "    \n",
+    "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return probability"
@@ -1534,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1571,20 +1559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "('l', 'i', 'k', 'e')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/1d/6kzpcbz12cldlyz7v1jhp3mm0000gn/T/ipykernel_17074/3516274347.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw3_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_estimate_probability\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimate_probability\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/VSCode-DataScience/coursera-NLP/02 Probabilistic Models/3 Autocomplete and Langauge Models/assignment/w3_unittest.py\u001b[0m in \u001b[0;36mtest_estimate_probability\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m   1288\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1289\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtest_case\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_cases\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1290\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"input\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1292\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/1d/6kzpcbz12cldlyz7v1jhp3mm0000gn/T/ipykernel_17074/1366445589.py\u001b[0m in \u001b[0;36mestimate_probability\u001b[0;34m(word, previous_n_gram, n_gram_counts, n_plus1_gram_counts, vocabulary_size, k)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# Calculate the denominator using the count of the previous n gram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;31m# and apply k-smoothing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m     \u001b[0mdenominator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn_gram_counts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprevious_n_gram\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mvocabulary_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0;31m# Define n plus 1 gram as the previous n-gram plus the current word as a tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: ('l', 'i', 'k', 'e')"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
