--- a/02 Probabilistic Models/1 Autocorrect/assignment/C2_W1_Assignment.ipynb
+++ b/02 Probabilistic Models/1 Autocorrect/assignment/C2_W1_Assignment.ipynb
@@ -1549,12 +1549,21 @@
     "    edit_two_set = set()\n",
     "    \n",
     "    ### START CODE HERE ###\n",
+    "    edit_one = edit_one_letter(word,allow_switches=allow_switches)\n",
+    "    for w in edit_one:\n",
+    "        if w:\n",
+    "            edit_two = edit_one_letter(w,allow_switches=allow_switches)\n",
+    "            edit_two_set.update(edit_two)\n",
+    "\n",
+    "\n",
+    "    '''\n",
     "    edit_one_set = edit_one_letter(word)\n",
     "    #print(edit_one_set)\n",
     "    for item in edit_one_set:\n",
     "        second_edit = edit_one_letter(item)\n",
     "        #print(second_edit)\n",
-    "        edit_two_set = edit_two_set|second_edit    \n",
+    "        edit_two_set = edit_two_set|second_edit\n",
+    "    ''' \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # return this as a set instead of a list\n",
