C2W1 assignment, try to fix

--- a/02 Probabilistic Models/1 Autocorrect/assignment/C2_W1_Assignment.ipynb
+++ b/02 Probabilistic Models/1 Autocorrect/assignment/C2_W1_Assignment.ipynb
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1791,7 @@
      "output_type": "stream",
      "text": [
       "entered word =  dys \n",
-      "suggestions =  ['dye', 'days']\n",
+      "suggestions =  ['days', 'dye']\n",
       "word 0: days, probability 0.000410\n",
       "word 1: dye, probability 0.000019\n",
       "data type of corrections <class 'list'>\n"
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2261,15 +2261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eer eer 0\n",
-      "eer ere 2\n"
+      "eer ere 2\n",
+      "eer eer 0\n"
      ]
     }
    ],
@@ -2295,63 +2295,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eer erde 3\n",
-      "eer nre 3\n",
-      "eer erme 3\n",
-      "eer erne 3\n",
-      "eer yre 3\n",
-      "eer erfe 3\n",
-      "eer bre 3\n",
-      "eer erye 3\n",
-      "eer zre 3\n",
-      "eer ire 3\n",
-      "eer kre 3\n",
-      "eer fre 3\n",
-      "eer erze 3\n",
       "eer eroe 3\n",
-      "eer hre 3\n",
-      "eer dre 3\n",
+      "eer zre 3\n",
       "eer erpe 3\n",
       "eer erge 3\n",
-      "eer wre 3\n",
-      "eer sre 3\n",
-      "eer erbe 3\n",
-      "eer cre 3\n",
-      "eer are 3\n",
-      "eer erce 3\n",
-      "eer mre 3\n",
-      "eer erhe 3\n",
-      "eer eer 0\n",
-      "eer ure 3\n",
-      "eer tre 3\n",
-      "eer xre 3\n",
-      "eer erle 3\n",
-      "eer erke 3\n",
-      "eer erqe 3\n",
-      "eer erse 3\n",
-      "eer lre 3\n",
-      "eer erxe 3\n",
-      "eer pre 3\n",
       "eer rre 3\n",
-      "eer erie 3\n",
-      "eer vre 3\n",
-      "eer erae 3\n",
-      "eer jre 3\n",
-      "eer erte 3\n",
-      "eer erue 3\n",
-      "eer erve 3\n",
-      "eer gre 3\n",
-      "eer qre 3\n",
+      "eer erde 3\n",
+      "eer erfe 3\n",
+      "eer eer 0\n",
+      "eer erye 3\n",
       "eer erwe 3\n",
+      "eer erhe 3\n",
+      "eer hre 3\n",
+      "eer ure 3\n",
+      "eer erze 3\n",
+      "eer mre 3\n",
+      "eer xre 3\n",
+      "eer wre 3\n",
+      "eer jre 3\n",
+      "eer erke 3\n",
+      "eer tre 3\n",
+      "eer kre 3\n",
+      "eer erbe 3\n",
+      "eer pre 3\n",
+      "eer erue 3\n",
+      "eer sre 3\n",
+      "eer vre 3\n",
+      "eer erse 3\n",
+      "eer ire 3\n",
+      "eer ore 3\n",
+      "eer erae 3\n",
+      "eer erqe 3\n",
+      "eer fre 3\n",
+      "eer yre 3\n",
+      "eer erce 3\n",
+      "eer erne 3\n",
+      "eer cre 3\n",
+      "eer lre 3\n",
       "eer erje 3\n",
-      "eer ore 3\n"
+      "eer qre 3\n",
+      "eer nre 3\n",
+      "eer erxe 3\n",
+      "eer erme 3\n",
+      "eer erve 3\n",
+      "eer erie 3\n",
+      "eer are 3\n",
+      "eer erte 3\n",
+      "eer bre 3\n",
+      "eer dre 3\n",
+      "eer erle 3\n",
+      "eer gre 3\n"
      ]
     }
    ],
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
